Add deviceRegister function to API
